examples/negative/patterns/constructor_wrong_arity.kai
# Negative fixture (#520 / patterns): a constructor pattern
# uses fewer sub-patterns than the variant declares. Typer must
# reject with an arity diagnostic.

type Tree = Leaf | Node(Int, Int, Int)

fn depth(t: Tree) : Int = match t {
  Leaf -> 0
  Node(a, b) -> a + b
}

fn main() : Int = depth(Leaf)
